# term-deposit-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt  term_deposit_prediction.ipynb
